--- a/gruvbox-dark.theme.css
+++ b/gruvbox-dark.theme.css
@@ -1,7 +1,8 @@
 /**
  * @name Gruvbox Dark
  * @description Gruvbox Dark for Discord (new UI update)
- * @author shved. @version 0.0.1
+ * @author shved.
+ * @version 0.0.1
  * @authorId 833767278969225266
  * @website https://github.com/shvedes/discord-gruvbox
 */
