--- a/gruvbox-dark.theme.css
+++ b/gruvbox-dark.theme.css
@@ -532,6 +532,14 @@
 	background-color: rgba(var(--gruv-dark-bg))
 }
 
+/* Background tweaks to fix Discord's inconsistent syling */
+
+.connection_c7f964,
+.connectContainer_c7f964,
+.appDetailsContainer__50a54 {
+    background-color: rgba(var(--gruv-dark-bg1));
+}
+
 /* ==== Nuked elements ==== */
 
 /* Top to bottom */
